--- a/uebungen/H1/uebung3.html
+++ b/uebungen/H1/uebung3.html
@@ -4,14 +4,21 @@
     <body>
         <h1>Frühlings-Baguette Rezept</h1>
         <img src="https://ww2.bettybossi.ch/static/rezepte/x/bb_bbzc100315_0018b_x.jpg" alt="">
+        <h2>Inhaltsverzeichnis</h2>
+        <ul>
+            <li><a href="#information">Information</a></li>
+            <li><a href="#zutaten">Zutaten</a></li>
+            <li><a href="#sowirdsgemacht">So Wirds Gemacht</a></li>
+        </ul>
         
+        <h2 id="information">Information</h2>
         <ul>
             <li>Vor- und zubereiten:ca. 15 Min.</li>
             <li> Grillieren: ca. 3 Min.  </li>
             <li> vegetarisch </li>
         </ul>
         <h4>Portion: 199 kcal, F 7 g, Kh 29 g, E 6 g</h4>
-        <h2>Zutaten</h2>
+        <h2 id="zutaten">Zutaten</h2>
         <p>(für 4 Personen)</p>
         <ul>
             <li>1 Baguette (ca. 200 g)</li>
@@ -24,7 +31,7 @@
             <li>25 g Kresse</li>
             <li>einige essbare Blüten (z. B. Gänseblümchen, Veilchen oder Margritli)</li>
         </ul>
-        <h2>Und so wirds gemacht:</h2>
+        <h2 id="sowirdsgemacht">Und so wirds gemacht:</h2>
         <ol>
             <li> Baguette längs halbieren, auf ein Backblech legen.  </li>
             <li>Öl warm werden lassen, Bundzwiebeln und Champignons ca. 3 Min. dämpfen, würzen, Kresse daruntermischen, auf die Baguettes verteilen, in Stücke schneiden. Blüten darüber verteilen.</li>
