--- a/uebungen/H2/Uebung3/index.html
+++ b/uebungen/H2/Uebung3/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <img class="logo" src="logo.png" alt="Logo">
-        <a href="index.html">Home</a>
+        <nav>Home</nav>
     </header>
     <main>
         <label for="zutaten">Zutaten</label><br>
