--- a/uebungen/D2/uebung2/uebung2.html
+++ b/uebungen/D2/uebung2/uebung2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="/Pictures/logo.png" alt="TBZ Logo">
+        <img src="pictures/logo.png" alt="TBZ Logo">
         <h1>Technische Berufsschule Zürich TBZ</h1>
     </div>
     <div class="nav">
@@ -20,7 +20,7 @@
         <a href="#">Schulstart</a>
     </div>
     <div class="main">
-        <img src="/Pictures/carrosserie.jpg" alt="Car Repair">
+        <img src="pictures/carrosserie.jpg" alt="Car Repair">
         <div class="text">
             <h2>Es hat noch freie Plätze!</h2>
             <p>Carrosserie Fachmann/Fachfrau Fachrichtung Spenglerei<br>Carrosserie Suisse-Zertifikat</p>
