--- a/uebungen/H2/Uebung3/index.html
+++ b/uebungen/H2/Uebung3/index.html
@@ -7,15 +7,27 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="logo.png" alt="Logo">
-        <nav>Home</nav>
+        <div>
+            <img class="logo" id="logoicon" src="logo.png" alt="Logo">
+            <div id="homeicon">
+                <a class="logo" href="index.html">
+                    <img class="logo" src="home.png" alt="">
+                </a>
+            </div>
+
+        </div>
     </header>
     <main>
-        <label for="zutaten">Zutaten</label><br>
-        <textarea name="zutaten" id="zutaten" rows="4" cols="40"></textarea>
-        <br>
-        <label for="zubereitung">Zubereitung</label><br>
-        <textarea name="zubereitung" id="zubereitung" rows="4" cols="40"></textarea>
+        <h2>Irgendwoname</h2>
+        <div>
+            <p>
+                Hier ist mein Blog! Ich freue mich, dass du den Weg hierher gefunden hast. In diesem Blog teile ich ausführliche und tiefgehende Inhalte zu verschiedenen Themen, die mir am Herzen liegen. Es ist mir wichtig, meine Gedanken, Erfahrungen und Erkenntnisse in einer Weise zu präsentieren, die nicht nur informativ, sondern auch anregend ist. Daher sind die Beiträge hier oft recht umfangreich und detailliert. Ich hoffe, dass du beim Lesen genauso viel Freude und Inspiration findest, wie ich beim Schreiben hatte. Tauche ein und lass dich von der Vielfalt und Tiefe der Themen überraschen!
+            </p>
+            <img src="bild.jpg" alt="">
+        </div>
     </main>
+    <footer>
+        <p>Footer</p>
+    </footer>
 </body>
 </html>
