I changed my whole text to english, because it looks better. I also added some text to the footer

--- a/Projekt/Code/AboutUs.html
+++ b/Projekt/Code/AboutUs.html
@@ -26,9 +26,9 @@
                 </div>
                 <ul>
                     <li><strong>Name:</strong> Leona Istrefi</li>
-                    <li><strong>Ausbildung:</strong> Applikationsentwicklerin </li>
-                    <li><strong>Arbeitsort:</strong> accenture</li>
-                    <li><strong>Schulort:</strong> Technische Berufsschule Zürich (TBZ)</li>
+                    <li><strong>Education:</strong> Applikation Developer </li>
+                    <li><strong>Workplace:</strong> Accenture</li>
+                    <li><strong>School:</strong> Technische Berufsschule Zürich (TBZ)</li>
                 </ul>
             </div>
             <div class="member">
@@ -37,9 +37,9 @@
                 </div>
                 <ul>
                     <li><strong>Name:</strong> Kristijan Lisica</li>
-                    <li><strong>Ausbildung:</strong> Applikationsentwickler</li>
-                    <li><strong>Arbeitsort:</strong> Consulteer </li>
-                    <li><strong>Schulort:</strong> Technische Berufsschule Zürich (TBZ)</li>
+                    <li><strong>Education:</strong> Applikation Developer</li>
+                    <li><strong>Workplace:</strong> Consulteer </li>
+                    <li><strong>School:</strong> Technische Berufsschule Zürich (TBZ)</li>
                 </ul>
             </div>
         </section>
