--- a/Projekt/Code/HomePage.html
+++ b/Projekt/Code/HomePage.html
@@ -22,13 +22,19 @@
         <section class="welcome-section">
             <div class="background-image"></div>
             <div class="welcome-text">
-                <h2>Herzlich willkommen!</h2>
-                <p>This is the newest Car Shop, developed by two apprentices! We are going to provide you with inside information only we know.</p>
+                <h2>Welcome</h2>
+                <p>This is the newest Car Shop, developed by two apprentices! We are going to provide you with information about every Car you could think of.
+                    We want you to know everything about the cars, so you will make no wrong choices in picking yours!
+                </p>
             </div>
         </section>
     </main>
     <footer>
-        Footer mit unseren Kontaktinformationen
+        <h4>Car Shop</h4>
+        <li><strong>Phonenumber:</strong> 079 526 42 38</li>
+        <li><strong>Address:</strong> Hagenholzstrasse 111, 8050 Zürich</li>            
+        <li><strong>E-Mail:</strong> CarShop@gmail.com</li>
+
     </footer>
 </body>
 </html>
