i added another text to the footer with my contact information.

--- a/Projekt/Code/HomePage.html
+++ b/Projekt/Code/HomePage.html
@@ -35,6 +35,12 @@
         <li><strong>Address:</strong> Hagenholzstrasse 111, 8050 Zürich</li>            
         <li><strong>E-Mail:</strong> CarShop@gmail.com</li>
 
+        <div class="Contact Leona">
+            <h4>Leona</h4>
+        <li><strong>Phonenumber:</strong> 079 604 25 01 </li>           
+        <li><strong>E-Mail:</strong> leona.istrefi@edu.tbz.ch</li>
+        </div>
+
     </footer>
 </body>
 </html>
