semantische Tags hinzugefügt - H2 uebung 3

--- a/uebungen/H2/Uebung3/wireframe1/index.html
+++ b/uebungen/H2/Uebung3/wireframe1/index.html
@@ -18,18 +18,18 @@
         </div>
     </header>
     <main>
-        <div class="blogsection">
-        <div>
-            <h2>Mein Blog</h2>
-            <img src="bild.jpg" alt="">
-        </div>
-        </div>
-        <div class="blogsection">
-        <div>
-            <h2>Mein Golb</h2>
-            <img src="bild2.jpg" alt="">
-        </div>
-        </div>
+        <article>
+            <div>
+                <h2>Mein Blog</h2>
+                <img src="bild.jpg" alt="">
+            </div>
+        </article>
+        <article>
+            <div>
+                <h2>Mein Golb</h2>
+                <img src="bild2.jpg" alt="">
+            </div>
+        </article>
     </main>
     <footer>
         <p>Footer</p>
