--- a/uebungen/H2/Uebung3/wireframe2/index.html
+++ b/uebungen/H2/Uebung3/wireframe2/index.html
@@ -17,7 +17,7 @@
 
         </div>
     </header>
-    <main>
+    <article>
         <h2>Irgendwoname</h2>
         <div>
             <p>
@@ -25,7 +25,7 @@
             </p>
             <img src="bild.jpg" alt="">
         </div>
-    </main>
+    </article>
     <footer>
         <p>Footer</p>
     </footer>
