I updated my code, including everywhere the same footer and navbar

--- a/Projekt/Code/CarsPage.html
+++ b/Projekt/Code/CarsPage.html
@@ -3,13 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CarsPage.css">
     <title>Cars Page</title>
 </head>
-<body>
-    <main>
-        <div class="Car Image"> </div>
-        <div class="Details Button"> </div>
-        <div class="Footer"> </div> 
-    </main>
-</body>
+<header>
+    <img src="fotos/CarShop.png" alt="Blog Logo" class="logo">
+    <h1>Car Shop</h1>
+</header>
+<nav>
+    <ul>
+        <li><a href="HomePage.html">Home</a></li>
+        <li><a href="CarsPage.html">Cars</a></li>
+        <li><a href="AboutUs.html">About Us</a></li>
+    </ul>
+</nav>
+
+
+
+<footer>
+    <div class="grid-container">
+        <div class="grid-item">
+            <h4>Car Shop</h4>
+            <ul>
+                <li><strong>Phonenumber:</strong> 079 526 42 38</li>
+                <li><strong>Address:</strong> Hagenholzstrasse 111, 8050 Zürich</li>            
+                <li><strong>E-Mail:</strong> CarShop@gmail.com</li>
+            </ul>
+        </div>
+        <div class="grid-item">
+            <div class="Contact Leona">
+                <h4>Leona</h4>
+                <ul>
+                    <li><strong>Phonenumber:</strong> 079 904 25 01 </li>           
+                    <li><strong>E-Mail:</strong> leona.istrefi@edu.tbz.ch</li>
+                </ul>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="Contact Kristijan">
+                <h4>Kristijan</h4>
+                <ul>
+                    <li><strong>Phonenumber:</strong> 078 624 34 19 </li>           
+                    <li><strong>E-Mail:</strong> kristijan.lisica@edu.tbz.ch</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
