--- a/Projekt/Code/HomePage.html
+++ b/Projekt/Code/HomePage.html
@@ -6,9 +6,8 @@
     <title>HomePage</title>
     <link rel="stylesheet" href="HomePage.css">
 </head>
-<body>
-    <header>
-        <img src="/fotos/CarShop.png" alt="Blog Logo" class="logo">
+<header>
+        <img src="fotos/CarShop.png" alt="Blog Logo" class="logo">
         <h1>Car Shop</h1>
     </header>
     <nav>
@@ -18,6 +17,9 @@
             <li><a href="AboutUs.html">About Us</a></li>
         </ul>
     </nav>
+    
+<body>
+    
     <main>
         <section class="welcome-section">
             <div class="background-image"></div>
@@ -29,18 +31,36 @@
             </div>
         </section>
     </main>
-    <footer>
-        <h4>Car Shop</h4>
-        <li><strong>Phonenumber:</strong> 079 526 42 38</li>
-        <li><strong>Address:</strong> Hagenholzstrasse 111, 8050 Zürich</li>            
-        <li><strong>E-Mail:</strong> CarShop@gmail.com</li>
-
-        <div class="Contact Leona">
-            <h4>Leona</h4>
-        <li><strong>Phonenumber:</strong> 079 604 25 01 </li>           
-        <li><strong>E-Mail:</strong> leona.istrefi@edu.tbz.ch</li>
-        </div>
-
-    </footer>
 </body>
+
+<footer>
+    <div class="grid-container">
+        <div class="grid-item">
+            <h4>Car Shop</h4>
+            <ul>
+                <li><strong>Phonenumber:</strong> 079 526 42 38</li>
+                <li><strong>Address:</strong> Hagenholzstrasse 111, 8050 Zürich</li>            
+                <li><strong>E-Mail:</strong> CarShop@gmail.com</li>
+            </ul>
+        </div>
+        <div class="grid-item">
+            <div class="Contact Leona">
+                <h4>Leona</h4>
+                <ul>
+                    <li><strong>Phonenumber:</strong> 079 904 25 01 </li>           
+                    <li><strong>E-Mail:</strong> leona.istrefi@edu.tbz.ch</li>
+                </ul>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="Contact Kristijan">
+                <h4>Kristijan</h4>
+                <ul>
+                    <li><strong>Phonenumber:</strong> 078 624 34 19 </li>           
+                    <li><strong>E-Mail:</strong> kristijan.lisica@edu.tbz.ch</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
