I created some Formlar files and their matching css file. I made sure the formulars work and then i styled them all the same

--- a/Projekt/Code/CarsPage.html
+++ b/Projekt/Code/CarsPage.html
@@ -17,10 +17,22 @@
         <li><a href="AboutUs.html">About Us</a></li>
     </ul>
 </nav>
-
-
+<body>
+    <div class="card-grid">
+        <div class="card-style">
+          <img src="fotos/Audi.jpg" class="image-style" />
+          <div class="card-content">
+            <h2>Audi A4</h2>
+          </div>
+          <div class="card-bottom">
+            <a href="Audi.html" class="btn-primary">Details</a>
+          </div>
+        </div>
+      </div>
+</body>
 
 <footer>
+    
     <div class="grid-container">
         <div class="grid-item">
             <h4>Car Shop</h4>
