--- a/Projekt/Code/CarsPage.html
+++ b/Projekt/Code/CarsPage.html
@@ -20,19 +20,63 @@
 <body>
     <div class="card-grid">
         <div class="card-style">
-          <img src="fotos/Audi.jpg" class="image-style" />
-          <div class="card-content">
-            <h2>Audi A4</h2>
-          </div>
-          <div class="card-bottom">
-            <a href="Audi.html" class="btn-primary">Details</a>
-          </div>
+            <img src="fotos/audi4.webp" class="image-style" />
+            <div class="card-content">
+                <h2>Audi A4</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="Audi.html" class="btn-primary">Details</a>
+            </div>
         </div>
-      </div>
+        <div class="card-style">
+            <img src="fotos/bmw.webp" class="image-style" />
+            <div class="card-content">
+                <h2>BMW 3 Series</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="BMW.html" class="btn-primary">Details</a>
+            </div>
+        </div>
+        <div class="card-style">
+            <img src="fotos/mercedesavif.avif" class="image-style" />
+            <div class="card-content">
+                <h2>Mercedes C-Class</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="Mercedes.html" class="btn-primary">Details</a>
+            </div>
+        </div>
+      
+        <div class="card-style">
+            <img src="fotos/Tesla.avif" class="image-style" />
+            <div class="card-content">
+                <h2>Tesla Model S</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="Tesla.html" class="btn-primary">Details</a>
+            </div>
+        </div>
+        <div class="card-style">
+            <img src="fotos/Ford.jpg" class="image-style" />
+            <div class="card-content">
+                <h2>Ford Mustang</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="Ford.html" class="btn-primary">Details</a>
+            </div>
+        </div>
+        <div class="card-style">
+            <img src="fotos/camaro.avif" class="image-style" />
+            <div class="card-content">
+                <h2>Chevy Camaro</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="Chevy.html" class="btn-primary">Details</a>
+            </div>
+        </div>
+    </div>
 </body>
-
 <footer>
-    
     <div class="grid-container">
         <div class="grid-item">
             <h4>Car Shop</h4>
