create every car page and change aboutUs page

--- a/Projekt/Code/BMW.html
+++ b/Projekt/Code/BMW.html
@@ -20,17 +20,17 @@
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="fotos/audi4.webp" alt="Car Image">
+            <img src="fotos/bmw.webp" alt="Car Image">
         </div>
         <div class="details-container">
-            <h2>Audi A4</h2>
+            <h2>BMW 3 Series</h2>
             <div class="details-grid">
-                <div class="detail-item"><strong>Developer:</strong> August Horch</div>
-                <div class="detail-item"><strong>PS:</strong> 204 </div>
-                <div class="detail-item"><strong>Model:</strong> Audi A4 40 TFSI</div>
+                <div class="detail-item"><strong>Developer:</strong> Karl Rapp & Gustav Otto</div>
+                <div class="detail-item"><strong>PS:</strong> 190 </div>
+                <div class="detail-item"><strong>Model:</strong> BMW 320d xDrive M Sport</div>
                 <div class="detail-item"><strong>Transmission:</strong> automatic</div>
-                <div class="detail-item"><strong>Year:</strong> 2023</div>
-                <div class="detail-item"><strong>Price:</strong> 36730.3 Fr.</div>
+                <div class="detail-item"><strong>Year:</strong> 2019</div>
+                <div class="detail-item"><strong>Price:</strong> 32'490 Fr.</div>
             </div>
         </div>
     </div>
