--- a/Projekt/Code/Tesla.html
+++ b/Projekt/Code/Tesla.html
@@ -20,17 +20,17 @@
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="fotos/audi4.webp" alt="Car Image">
+            <img src="fotos/Tesla.avif" alt="Car Image">
         </div>
         <div class="details-container">
-            <h2>Audi A4</h2>
+            <h2>Tesla Model S</h2>
             <div class="details-grid">
-                <div class="detail-item"><strong>Developer:</strong> August Horch</div>
-                <div class="detail-item"><strong>PS:</strong> 204 </div>
-                <div class="detail-item"><strong>Model:</strong> Audi A4 40 TFSI</div>
+                <div class="detail-item"><strong>Developer:</strong> Elon Musk & Jeffrey Brian Straube</div>
+                <div class="detail-item"><strong>PS:</strong> 525 </div>
+                <div class="detail-item"><strong>Model:</strong> Tesla Model S 75 D</div>
                 <div class="detail-item"><strong>Transmission:</strong> automatic</div>
-                <div class="detail-item"><strong>Year:</strong> 2023</div>
-                <div class="detail-item"><strong>Price:</strong> 36730.3 Fr.</div>
+                <div class="detail-item"><strong>Year:</strong> 2019</div>
+                <div class="detail-item"><strong>Price:</strong> 39'500 Fr.</div>
             </div>
         </div>
     </div>
