--- a/Projekt/Code/Chevy.html
+++ b/Projekt/Code/Chevy.html
@@ -20,17 +20,17 @@
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="fotos/audi4.webp" alt="Car Image">
+            <img src="fotos/camaro.avif" alt="Car Image">
         </div>
         <div class="details-container">
-            <h2>Audi A4</h2>
+            <h2>Chevy Camaro</h2>
             <div class="details-grid">
-                <div class="detail-item"><strong>Developer:</strong> August Horch</div>
-                <div class="detail-item"><strong>PS:</strong> 204 </div>
-                <div class="detail-item"><strong>Model:</strong> Audi A4 40 TFSI</div>
+                <div class="detail-item"><strong>Developer:</strong> Chevrolet</div>
+                <div class="detail-item"><strong>PS:</strong> 405 </div>
+                <div class="detail-item"><strong>Model:</strong>CHEVROLET Camaro 6.2 Coupé Automatic</div>
                 <div class="detail-item"><strong>Transmission:</strong> automatic</div>
-                <div class="detail-item"><strong>Year:</strong> 2023</div>
-                <div class="detail-item"><strong>Price:</strong> 36730.3 Fr.</div>
+                <div class="detail-item"><strong>Year:</strong> 2014</div>
+                <div class="detail-item"><strong>Price:</strong> 21'899 Fr.</div>
             </div>
         </div>
     </div>
