--- a/Projekt/Code/Mercedes.html
+++ b/Projekt/Code/Mercedes.html
@@ -20,17 +20,17 @@
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="fotos/audi4.webp" alt="Car Image">
+            <img src="fotos/mercedesavif.avif" alt="Car Image">
         </div>
         <div class="details-container">
-            <h2>Audi A4</h2>
+            <h2>Tesla Model S</h2>
             <div class="details-grid">
-                <div class="detail-item"><strong>Developer:</strong> August Horch</div>
-                <div class="detail-item"><strong>PS:</strong> 204 </div>
-                <div class="detail-item"><strong>Model:</strong> Audi A4 40 TFSI</div>
+                <div class="detail-item"><strong>Developer:</strong> Carl Benz & Max Kaspar Rose</div>
+                <div class="detail-item"><strong>PS:</strong> 390 </div>
+                <div class="detail-item"><strong>Model:</strong> Mercedes-BENZ C 43 AMG 4Matic 9G-Tronic</div>
                 <div class="detail-item"><strong>Transmission:</strong> automatic</div>
-                <div class="detail-item"><strong>Year:</strong> 2023</div>
-                <div class="detail-item"><strong>Price:</strong> 36730.3 Fr.</div>
+                <div class="detail-item"><strong>Year:</strong> 2018</div>
+                <div class="detail-item"><strong>Price:</strong> 43'500 Fr.</div>
             </div>
         </div>
     </div>
