made everything responsive

--- a/Projekt/Code/CarsPage.html
+++ b/Projekt/Code/CarsPage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="CarsPage.css">
     <title>Cars Page</title>
 </head>
+<body>
 <header>
     <img src="fotos/CarShop.png" alt="Blog Logo" class="logo">
     <h1>Car Shop</h1>
@@ -17,7 +18,7 @@
         <li><a href="AboutUs.html">About Us</a></li>
     </ul>
 </nav>
-<body>
+<main>
     <div class="card-grid">
         <div class="card-style">
             <img src="fotos/audi4.webp" class="image-style" />
@@ -46,7 +47,6 @@
                 <a href="Mercedes.html" class="btn-primary">Details</a>
             </div>
         </div>
-      
         <div class="card-style">
             <img src="fotos/Tesla.avif" class="image-style" />
             <div class="card-content">
@@ -74,8 +74,26 @@
                 <a href="Chevy.html" class="btn-primary">Details</a>
             </div>
         </div>
+        <div class="card-style">
+            <img src="fotos/Porsche.png" class="image-style" />
+            <div class="card-content">
+                <h2>Porsche</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="Porsche.html" class="btn-primary">Details</a>
+            </div>
+        </div>
+        <div class="card-style">
+            <img src="fotos/lamborghini.png" class="image-style" />
+            <div class="card-content">
+                <h2>Lamborghini</h2>
+            </div>
+            <div class="card-bottom">
+                <a href="Lamborghini.html" class="btn-primary">Details</a>
+            </div>
+        </div>
     </div>
-</body>
+</main>
 <footer>
     <div class="grid-container">
         <div class="grid-item">
@@ -106,4 +124,5 @@
         </div>
     </div>
 </footer>
+</body>
 </html>
