--- a/Projekt/Code/Porsche.html
+++ b/Projekt/Code/Porsche.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Audi.css">
-    <title>BMW</title>
+    <title>Porsche</title>
 </head>
 <header>
     <img src="fotos/CarShop.png" alt="Blog Logo" class="logo">
@@ -20,17 +20,17 @@
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="fotos/bmw.webp" alt="Car Image">
+            <img src="fotos/Porsche.png" alt="Car Image">
         </div>
         <div class="details-container">
-            <h2>BMW 3 Series</h2>
+            <h2>Porsche</h2>
             <div class="details-grid">
-                <div class="detail-item"><strong>Developer:</strong> Karl Rapp & Gustav Otto</div>
-                <div class="detail-item"><strong>PS:</strong> 190 </div>
-                <div class="detail-item"><strong>Model:</strong> BMW 320d xDrive M Sport</div>
+                <div class="detail-item"><strong>Developer:</strong> Ferdinand Porsche</div>
+                <div class="detail-item"><strong>PS:</strong> 385 </div>
+                <div class="detail-item"><strong>Model:</strong> Porsche 911 Carrera PDK </div>
                 <div class="detail-item"><strong>Transmission:</strong> automatic</div>
-                <div class="detail-item"><strong>Year:</strong> 2019</div>
-                <div class="detail-item"><strong>Price:</strong> 32'490 Fr.</div>
+                <div class="detail-item"><strong>Year:</strong> 2023</div>
+                <div class="detail-item"><strong>Price:</strong> 139'000 Fr.</div>
             </div>
         </div>
     </div>
