--- a/Projekt/Code/Registration.html
+++ b/Projekt/Code/Registration.html
@@ -39,7 +39,7 @@
             <option value="Germany">Germany</option>
             <option value="Austria">Austria</option>
             <option value="Switzerland">Switzerland</option>
-            <option value="Diffrent">Different</option>
+            <option value="Different">Different</option>
         </select><br><br>
         
         <label>
