--- a/Projekt/Code/Ford.html
+++ b/Projekt/Code/Ford.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Audi.css">
-    <title>Audi</title>
+    <title>Ford</title>
 </head>
 <header>
     <img src="fotos/CarShop.png" alt="Blog Logo" class="logo">
