changed filename and had to change the link on every car

--- a/Projekt/Code/Mercedes.html
+++ b/Projekt/Code/Mercedes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Audi.css">
+    <link rel="stylesheet" href="DetailedCars.css">
     <title>Mercedes</title>
 </head>
 <header>
@@ -23,7 +23,7 @@
             <img src="fotos/mercedesavif.avif" alt="Car Image">
         </div>
         <div class="details-container">
-            <h2>Tesla Model S</h2>
+            <h2>Mercedes-Benz</h2>
             <div class="details-grid">
                 <div class="detail-item"><strong>Developer:</strong> Carl Benz & Max Kaspar Rose</div>
                 <div class="detail-item"><strong>PS:</strong> 390 </div>
