--- a/Projekt/Code/Porsche.html
+++ b/Projekt/Code/Porsche.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Audi.css">
+    <link rel="stylesheet" href="DetailedCars.css">
     <title>Porsche</title>
 </head>
 <header>
