included header everywhere

--- a/Projekt/Code/PasswordResetConfirmation.html
+++ b/Projekt/Code/PasswordResetConfirmation.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="PasswordResetConfirmation.css">
 </head>
 <body>
-    <h1>Reset Password</h1>
-    <p>An email has been sent to reset your password.</p>
+    <header> 
+       <h1>Reset Password</h1>
+    <p>An email has been sent to reset your password.</p> 
+    </header>
+    
 </body>
 </html>
