--- a/Projekt/Code/ForgotPassword.html
+++ b/Projekt/Code/ForgotPassword.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="ForgotPassword.css">
 </head>
 <body>
-    <h1>Forgot Password</h1>
+    <header>
+         <h1>Forgot Password</h1>
+    </header>
+   
     <form action="PasswordResetConfirmation.html" method="get">
         <label for="email">E-Mail:</label>
         <input type="email" id="email" name="email" required><br><br>
