--- a/Projekt/Code/Login.html
+++ b/Projekt/Code/Login.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="Login.css">
 </head>
 <body>
-    <h1>Login</h1>
+    <header>
+        <h1>Login</h1>
+    </header>
+    
     <form action="HomePage.html" method="get">
         <label for="email">E-Mail:</label>
         <input type="email" id="email" name="email" required><br><br>
