--- a/Projekt/Code/Registration.html
+++ b/Projekt/Code/Registration.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="Registration.css">
 </head>
 <body>
-    <h1>Registration</h1>
+    <header>
+       <h1>Registration</h1> 
+    </header>
+    
     <form action="Login.html" method="get">
         <label for="gender">Gender:</label>
         <input type="radio" id="male" name="gender" value="male" required> Male
